--- a/index.html
+++ b/index.html
@@ -5,29 +5,54 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title></title>
         <link rel="stylesheet" href="/assets/components/materialize/dist/css/materialize.min.css">
+        <link rel="stylesheet" type="text/css" href="/assets/app.css">
     </head>
     <body>
-    <ul id="left-sidenav" class="side-nav">
-        <li></li>
-        <li></li>
-    </ul>
+        <ul id="left-sidenav" class="side-nav left-nav">
+            <li class="waves-effect waves-blue">
+                <a class="" href="#">
+                    <i class="mdi-action-dashboard"></i>
+                    Dashboard
+                </a>
+            </li>
+            <li class="waves-effect waves-blue">
+                <a class="" href="#">
+                    <i class="mdi-action-settings"></i>
+                    Settings
+                </a>
+            </li>
+            <li class="waves-effect waves-blue"><a href="#"><i class="mdi-action-account-circle"></i>Account</a></li>
+        </ul>
+        <!-- <header id="header" class="header">
+            
+        </header>/header -->
         <nav>
             <div class="nav-wrapper light-blue">
                 <a href="#" data-activates="left-sidenav" class="button-collapse show-on-large"><i class="mdi-navigation-menu"></i></a>
                 <div class="brand-logo"></div>
             </div>
         </nav>
-        <div class="page">
+        <div class="page container">
             <div class="row">
-                <div class="col m12">
-                    <h5 class="red-text">akhilrs</h5>
+                <div class="col m6">
+                    <div class="card-panel valign-wrapper">
+                     <div class="row valign-wrapper">
+                         <div class="col m3 l3">  <img src="http://akhilrs.com/images/akhilrs.jpg" alt="" class="circle dp"></div>
+                         <div class="col m9 l9">
+                             <h5 class="blue-text flow-text">akhilrs &lt;akhirs@live.com&gt;</h5>
+                         </div>
+                     </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <footer class="page-footer light-blue">
+            <div class="footer-copyright"></div>
+        </footer>
         <script src="/assets/components/jquery/dist/jquery.min.js"></script>
         <script src="/assets/components/materialize/dist/js/materialize.min.js"></script>
         <script type="text/javascript">
-            jQuery('.button-collapse').sideNav();
+        jQuery('.button-collapse').sideNav();
         </script>
     </body>
 </html>
