--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             </div>
         </div>
         <footer class="page-footer light-blue">
-            <div class="footer-copyright"></div>
+            <div class="footer-copyright center">
+                copyright &copy; 2015
+            </div>
         </footer>
         <script src="/assets/components/jquery/dist/jquery.min.js"></script>
         <script src="/assets/components/materialize/dist/js/materialize.min.js"></script>
