--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <div class="col m6">
                     <div class="card-panel valign-wrapper">
                      <div class="row valign-wrapper">
-                         <div class="col m3 l3">  <img src="http://akhilrs.com/images/akhilrs.jpg" alt="" class="circle dp"></div>
-                         <div class="col m9 l9">
-                             <h5 class="blue-text flow-text">akhilrs &lt;akhirs@live.com&gt;</h5>
+                         <div class="col s2 m3 l3">  <img src="http://akhilrs.com/images/akhilrs.jpg" alt="" class="circle dp"></div>
+                         <div class="col s10 m9 l9">
+                             <h5 class="blue-text flow-text">akhilrs &lt;akhirs@email.com&gt;</h5>
                          </div>
                      </div>
                     </div>
